# facadia

./: .gitignore  ARCHITECTURE.md  CITATION.cff  HONESTY.md  LICENSE  README.md
.github/workflows/: ci.yml
docs/: anysplat.md
recon3d/: .gitignore  PLAN.md  README.md  pipeline.py  pyproject.toml  run.py
recon3d/core/: __init__.py  diagnostics.py  export.py  export_nerfstudio.py  frames.py  masks.py  reconstruct.py
recon3d/inference/: .gitignore  README.md  anysplat_recon.py  app.py  live.py  run_once.py  serve.py  setup.sh  show.html
recon3d/viewer/: index.html
survey/: .gitignore  README.md  pyproject.toml  run.py
survey/core/: __init__.py  detect.py  frames.py  gsd.py  reason.py  report.py  score.py
survey/dashboard/: index.html
survey/data/samples/: ATTRIBUTION.md
survey/demo/: report.json  report.md
survey/eval/: measure_accuracy.py
survey/tests/: test_detect.py  test_gsd.py  test_report.py  test_score.py
video/: .gitignore  README.md  package-lock.json  package.json  remotion.config.ts  tsconfig.json
video/src/: Main.tsx  Root.tsx  defect.json  theme.ts
video/src/components/: AudioTrack.tsx  Dashboard.tsx  DigitalTwin.tsx  Effects.tsx  HeroDefect.tsx
video/src/components/hud/: BoundingBox.tsx  Caption.tsx  HealthScore.tsx  HudFrame.tsx  ReasoningCard.tsx  Scan.tsx  SeverityGauge.tsx  primitives.tsx
video/src/data/: config.ts  script.ts
video/src/loop/: LoopMain.tsx
video/src/sequences/: S1_ColdOpen.tsx  S2_Cutover.tsx  S3_Scan.tsx  S4_Reasoning.tsx  S5_Overview.tsx  S6_Report.tsx  S7_Tagline.tsx  S8_Delivery.tsx
video/src/util/: anim.ts
