[project]
name = "facadia-survey"
version = "0.1.0"
description = "Facadia AI building surveyor: drone frames -> measured defects -> Claude grades + drafts the MBIS report"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.9",
    "numpy>=1.26",
    "scikit-image>=0.22",   # skeleton / medial-axis crack width
    "pillow>=10.0",
    "anthropic>=0.40",      # Claude reasoning + report drafting
    "python-dotenv>=1.0",   # load survey/.env (ANTHROPIC_API_KEY)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]
