[project]
name = "facadia-survey"
version = "0.1.0"
description = "Facadia AI building surveyor: drone frames -> measured defects -> Claude grades + drafts the MBIS report"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.9",
    "numpy>=1.26",
    "scikit-image>=0.22",   # skeleton / medial-axis crack width
    "pillow>=10.0",
    "anthropic>=0.40",      # backing VLM API for the reasoning/report step
    "python-dotenv>=1.0",   # load survey/.env (model API key)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]   # long lines are tolerated in the rubric prompt / docstrings

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
